--- a/index.html
+++ b/index.html
@@ -2,16 +2,15 @@
 <html>
   <head>
     <title>Demo VueJS Project</title>
-    <link rel="stylesheet" href="main.css">
-    <link rel="stylesheet" href="main.sass">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.4.3/css/bulma.css">
+    <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
 
-    <nav class="navbar ">
+    <nav class="navbar">
       <div class="navbar-brand">
         <a class="navbar-item" href="http://www.zelda.com">
-          <img src="https://vignette2.wikia.nocookie.net/zelda/images/4/40/The_Legend_of_Zelda_series_%28logo%29.png/revision/latest?cb=20090219032815" alt="The Legend of Zelda" width="112px" height="58px">
+          <img src="https://vignette2.wikia.nocookie.net/zelda/images/4/40/The_Legend_of_Zelda_series_%28logo%29.png/revision/latest?cb=20090219032815" alt="The Legend of Zelda">
         </a>
       </div>
     </nav>
